# android_build

./: .gitignore  .gn  BUILD.gn  book.xml  main.py
ninja_build/main/: build.ninja
ninja_build/main/src/: main.c
src/: BUILD.gn
src/android/: BUILD.gn
src/android/app/src/main/: AndroidManifest.xml  BUILD.gn  proguard-rules.pro
src/android/app/src/main/assets/: hot_sites.json
src/android/app/src/main/proto/: pb_feed_list.proto
src/android/app/src/main/res/layout/: activity_main.xml
src/android/app/src/main/res/values/: strings.xml  styles.xml
src/android/java/template/: BuildConfig.template
src/android/m2/: maven_download.py  todolist.txt
src/android/m2/files/androidx.appcompat/appcompat-resources/1.1.0/: appcompat-resources-1.1.0.aar.md5  appcompat-resources-1.1.0.pom.md5
src/android/m2/files/androidx.appcompat/appcompat/1.1.0/: appcompat-1.1.0.aar.md5  appcompat-1.1.0.json  appcompat-1.1.0.pom.md5
src/android/m2/files/androidx.collection/collection/1.0.0/: collection-1.0.0.pom.md5
src/android/m2/files/androidx.core/core/1.1.0/: core-1.1.0.aar.md5  core-1.1.0.pom.md5
src/android/m2/files/androidx.cursoradapter/cursoradapter/1.0.0/: cursoradapter-1.0.0.aar.md5  cursoradapter-1.0.0.pom.md5
src/android/m2/files/androidx.drawerlayout/drawerlayout/1.0.0/: drawerlayout-1.0.0.aar.md5  drawerlayout-1.0.0.pom.md5
src/android/m2/files/androidx.fragment/fragment/1.1.0/: fragment-1.1.0.aar.md5  fragment-1.1.0.pom.md5
src/android/platform/: BUILD.gn
src/android/platform/src/main/: AndroidManifest.xml
src/android/platform/src/main/java/com/android/main/platform/: TimeHelper.java
src/android/platform/src/main/java/com/oppo/main/platform/: TimeHelper.java
src/android/platform/src/main/res/values/: strings.xml
src/android/platform/templates/: AndroidManifest.xml
src/java/main/: BUILD.gn
src/linux/: BUILD.gn
src/linux/src/: main.c
src/linux/src/arch/x86/: atomic.h  bitops.c  bitops.h
src/linux/src/config/: compiler.h  config.h
src/linux/src/include/asm-generic/: bitops.c  bitops.h
src/linux/src/include/linux/: atomic.h  bitops.h
src/linux/src/util/: atomic.h  bug.h  kernel.h  list.h  printk.c  printk.h
src/linux/test/: BUILD.gn  main.c
src/linux/test/src/: main.c
src/linux/test/src/util/: test_atomic.c  test_atomic.h  test_list.c  test_list.h
src/linux/test/util/: test_list.c
src/main/app/: BUILD.gn
src/main/app/src/: endian.c  endian.h  k_types.h  main.c  main.cpp
src/main/app/src/chapter2/: chapter2.c  chapter2.h
src/main/hello_shared/: BUILD.gn  hello.c
src/main/hello_static/: BUILD.gn  hello.c  hello.h
src/test/: BUILD.gn
