import("//build/config/android/config.gni")
import("//build/config/android/internal_rules.gni")
import("//build/config/android/rules.gni")

android_resources("platform_res") {
  android_manifest = "src/main/AndroidManifest.xml"
  resource_dirs = [ "src/main/res" ]
}

java_prebuilt("jsr305_java") {
  jar_path = "libs/jsr305-1.3.9.jar"
  supports_android = true
}

java_prebuilt("guava_java") {
  jar_path = "libs/guava-10.0.jar"
  supports_android = true
}

android_library("platform_java") {
  deps = [
    ":guava_java",
    ":jsr305_java",
    ":platform_res",
  ]

  java_files = [ "src/main/java/com/android/main/platform/TimeHelper.java" ]
}

jinja_template("platform_manifest") {
  input = "templates/AndroidManifest.xml"
  output = "$target_gen_dir/$target_name/AndroidManifest.xml"
  variables = [ "package_name=com.android.demo" ]
}
