executable("test_linux") {
  c_sources_rel = exec_script("//gn/build/android/gn/find_directories.py",
                              [
                                rebase_path(".", root_build_dir),
                                "--include-pattern",
                                "*.c",
                              ],
                              "list lines")
  c_sources = rebase_path(c_sources_rel, ".", root_build_dir)

  sources = c_sources
  deps = [
    "//src/linux:test_linux",
  ]
}
