executable("test_linux") {
  c_sources_rel = exec_script("//gn/build/android/gn/find_directories.py",
                              [
                                "--include-pattern",
                                "*.c",
                                rebase_path("src", root_build_dir),
                              ],
                              "list lines")
  c_sources = rebase_path(c_sources_rel, ".", root_build_dir)

  sources = c_sources
  deps = [
    "//src/linux:static_linux",
  ]
  include_dirs = [ "src" ]
  configs += [ "//src/linux:linux_config" ]
}
